[project]
name = "diapulse"
version = "0.1.0"
description = "Deep Learning LSTM models to predict my future BG."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "keras>=3.8.0",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.1",
    "streamlit>=1.42.0",
]
